--- a/advanced-css-courses/Natours/starter/sass/main.scss
+++ b/advanced-css-courses/Natours/starter/sass/main.scss
@@ -7,8 +7,9 @@
 @import "base/typography";
 @import "base/utilities";
 
-@import "commponents/button";
+@import "components/button";
 
+@import "layout/grid";
 @import "layout/header";
 
 @import "pages/home";
